mm_glib_sources = [
  'mm-glibconfig.h',
  'mm-glib.h',
  'object.cc',
  'object.h',
  'base64.cc',
  'base64.h',
  'binding.cc',
  'binding.h',
  'bytearray.cc',
  'bytearray.h',
  'bytes.cc',
  'bytes.h',
  'checksum.cc',
  'checksum.h',
  'class.cc',
  'class.h',
  'containerhandle_shared.h',
  'convert.cc',
  'convert.h',
  'date.cc',
  'date.h',
  'datetime.cc',
  'datetime.h',
  'debug.cc',
  'debug.h',
  'dispatcher.cc',
  'dispatcher.h',
  'dummy_header.h',
  'enums.cc',
  'enums.h',
  'environ.cc',
  'environ.h',
  'error.cc',
  'error.h',
  'exceptionhandler.cc',
  'exceptionhandler.h',
  'extraclassinit.cc',
  'extraclassinit.h',
  'fileutils.cc',
  'fileutils.h',
  'i18n.h',
  'i18n-lib.h',
  'init.cc',
  'init.h',
  'interface.cc',
  'interface.h',
  'iochannel.cc',
  'iochannel.h',
  'keyfile.cc',
  'keyfile.h',
  'main.cc',
  'main.h',
  'markup.cc',
  'markup.h',
  'miscutils.cc',
  'miscutils.h',
  'module.cc',
  'module.h',
  'nodetree.cc',
  'nodetree.h',
  'objectbase.cc',
  'objectbase.h',
  'optioncontext.cc',
  'optioncontext.h',
  'optionentry.cc',
  'optionentry.h',
  'optiongroup.cc',
  'optiongroup.h',
  'pattern.cc',
  'pattern.h',
  'priorities.h',
  'property.cc',
  'property.h',
  'propertyproxy_base.cc',
  'propertyproxy_base.h',
  'propertyproxy.cc',
  'propertyproxy.h',
  'quark.cc',
  'quark.h',
  'random.cc',
  'random.h',
  'refptr.h',
  'regex.cc',
  'regex.h',
  'shell.cc',
  'shell.h',
  'signalproxy.cc',
  'signalproxy_connectionnode.cc',
  'signalproxy_connectionnode.h',
  'signalproxy.h',
  'spawn.cc',
  'spawn.h',
  'stringutils.cc',
  'stringutils.h',
  'timer.cc',
  'timer.h',
  'timezone.cc',
  'timezone.h',
  'unicode.cc',
  'unicode.h',
  'uriutils.cc',
  'uriutils.h',
  'ustring.cc',
  'ustring.h',
  'utility.cc',
  'utility.h',
  'value_basictypes.cc',
  'value_basictypes.h',
  'value.cc',
  'value_custom.cc',
  'value_custom.h',
  'value.h',
  'variant_basictypes.cc',
  'variant_basictypes.h',
  'variant.cc',
  'variantdbusstring.cc',
  'variantdbusstring.h',
  'variantdict.cc',
  'variantdict.h',
  'variant.h',
  'variantiter.cc',
  'variantiter.h',
  'varianttype.cc',
  'varianttype.h',
  'vectorutils.cc',
  'vectorutils.h',
  'wrap.cc',
  'wrap.h',
  'wrap_init.cc',
  'wrap_init.h',

  'private/binding_p.h',
  'private/bytearray_p.h',
  'private/bytes_p.h',
  'private/checksum_p.h',
  'private/convert_p.h',
  'private/date_p.h',
  'private/datetime_p.h',
  'private/enums_p.h',
  'private/fileutils_p.h',
  'private/interface_p.h',
  'private/iochannel_p.h',
  'private/keyfile_p.h',
  'private/markup_p.h',
  'private/miscutils_p.h',
  'private/module_p.h',
  'private/nodetree_p.h',
  'private/object_p.h',
  'private/optioncontext_p.h',
  'private/optionentry_p.h',
  'private/optiongroup_p.h',
  'private/regex_p.h',
  'private/shell_p.h',
  'private/spawn_p.h',
  'private/timezone_p.h',
  'private/unicode_p.h',
  'private/uriutils_p.h',
  'private/variantdict_p.h',
  'private/variantiter_p.h',
  'private/variant_p.h',
  'private/varianttype_p.h'
]

mm_glib_include_directories = [
  '..' / '..',
  '..' / '..' / 'subprojects' / 'libsigcplusplus'
]

mm_glib_dependencies = [
  dependency('sigc++-3.0', fallback:['sigc++-3.0']),
  dependency('gobject-2.0'),
  dependency('glib-2.0'),
  dependency('gio-2.0'),
  dependency('gio-unix-2.0'),
  dependency('gmodule-2.0')
]

mm_glib_cpp_args = [
  '-DGLIBMM_BUILD=1'
]

mm_glib_library = library('mm-glib',
  mm_glib_sources,
  dependencies: mm_glib_dependencies,
  implicit_include_directories: false,
  include_directories: mm_glib_include_directories,
  cpp_args: mm_glib_cpp_args,
  install: true
)
