mm_pango_sources = [
  'attributes.cc',
  'attributes.h',
  'attriter.cc',
  'attriter.h',
  'attrlist.cc',
  'attrlist.h',
  'cairofontmap.cc',
  'cairofontmap.h',
  'cairofontmapimpl.cc',
  'cairofontmapimpl.h',
  'color.cc',
  'color.h',
  'context.cc',
  'context.h',
  'coverage.cc',
  'coverage.h',
  'dummy_header.h',
  'font.cc',
  'fontdescription.cc',
  'fontdescription.h',
  'fontface.cc',
  'fontface.h',
  'fontfamily.cc',
  'fontfamily.h',
  'font.h',
  'fontmap.cc',
  'fontmap.h',
  'fontmetrics.cc',
  'fontmetrics.h',
  'fontset.cc',
  'fontset.h',
  'glyph.cc',
  'glyph.h',
  'glyphitem.cc',
  'glyphitem.h',
  'glyphstring.cc',
  'glyphstring.h',
  'init.cc',
  'init.h',
  'item.cc',
  'item.h',
  'language.cc',
  'language.h',
  'layout.cc',
  'layout.h',
  'layoutiter.cc',
  'layoutiter.h',
  'layoutline.cc',
  'layoutline.h',
  'mm-pangoconfig.h',
  'mm-pango.h',
  'rectangle.cc',
  'rectangle.h',
  'renderer.cc',
  'renderer.h',
  'tabarray.cc',
  'tabarray.h',
  'types.h',
  'wrap_init.cc',
  'wrap_init.h',

  'private/attributes_p.h',
  'private/attriter_p.h',
  'private/attrlist_p.h',
  'private/cairofontmap_p.h',
  'private/color_p.h',
  'private/context_p.h',
  'private/coverage_p.h',
  'private/fontdescription_p.h',
  'private/fontface_p.h',
  'private/fontfamily_p.h',
  'private/fontmap_p.h',
  'private/fontmetrics_p.h',
  'private/font_p.h',
  'private/fontset_p.h',
  'private/glyphitem_p.h',
  'private/glyph_p.h',
  'private/glyphstring_p.h',
  'private/item_p.h',
  'private/language_p.h',
  'private/layoutiter_p.h',
  'private/layoutline_p.h',
  'private/layout_p.h',
  'private/rectangle_p.h',
  'private/renderer_p.h',
  'private/tabarray_p.h'
]

mm_pango_include_directories = [
  '..' / '..',
  '..' / '..' / 'subprojects' / 'libsigcplusplus'
]

mm_pango_dependencies = [
  dependency('sigc++-3.0', fallback:['sigc++-3.0']),
  dependency('gobject-2.0'),
  dependency('glib-2.0'),
  dependency('gio-2.0'),
  dependency('gio-unix-2.0'),
  dependency('pango'),
  dependency('pangocairo')
]

mm_pango_cpp_args = [
  '-DPANGOMM_BUILD=1'
]

mm_pango_library = library('mm-pango',
  mm_pango_sources,
  dependencies: mm_pango_dependencies,
  implicit_include_directories: false,
  include_directories: mm_pango_include_directories,
  cpp_args: mm_pango_cpp_args,
  link_with: [mm_glib_library, mm_gio_library, mm_cairo_library],
  install: true
)
