mm_gdk_sources = [
  'applaunchcontext.cc',
  'applaunchcontext.h',
  'cairocontext.cc',
  'cairocontext.h',
  'cairoutils.cc',
  'cairoutils.h',
  'clipboard.cc',
  'clipboard.h',
  'contentformatsbuilder.cc',
  'contentformatsbuilder.h',
  'contentformats.cc',
  'contentformats.h',
  'contentprovider.cc',
  'contentprovider.h',
  'cursor.cc',
  'cursor.h',
  'device.cc',
  'device.h',
  'devicepad.cc',
  'devicepad.h',
  'devicetool.cc',
  'devicetool.h',
  'devicewithpad.cc',
  'devicewithpad.h',
  'display.cc',
  'display.h',
  'displaymanager.cc',
  'displaymanager.h',
  'drag.cc',
  'drag.h',
  'dragsurface.cc',
  'dragsurface.h',
  'dragsurfaceimpl.cc',
  'dragsurfaceimpl.h',
  'drawcontext.cc',
  'drawcontext.h',
  'drop.cc',
  'drop.h',
  'dummy_header.h',
  'enums.cc',
  'enums.h',
  'event.cc',
  'event.h',
  'frameclock.cc',
  'frameclock.h',
  'frametimings.cc',
  'frametimings.h',
  'gdkmmconfig.h',
  'gdkmm.h',
  'general.cc',
  'general.h',
  'glcontext.cc',
  'glcontext.h',
  'gltexture.cc',
  'gltexture.h',
  'memorytexture.cc',
  'memorytexture.h',
  'monitor.cc',
  'monitor.h',
  'paintable.cc',
  'paintable.h',
  'pixbufanimation.cc',
  'pixbufanimation.h',
  'pixbufanimationiter.cc',
  'pixbufanimationiter.h',
  'pixbuf.cc',
  'pixbufformat.cc',
  'pixbufformat.h',
  'pixbuf.h',
  'pixbufloader.cc',
  'pixbufloader.h',
  'popup.cc',
  'popup.h',
  'popuplayout.cc',
  'popuplayout.h',
  'popupsurfaceimpl.cc',
  'popupsurfaceimpl.h',
  'rectangle.cc',
  'rectangle.h',
  'rgba.cc',
  'rgba.h',
  'seat.cc',
  'seat.h',
  'snapshot.cc',
  'snapshot.h',
  'surface.cc',
  'surface.h',
  'texture.cc',
  'texture.h',
  'timecoord.cc',
  'timecoord.h',
  'toplevel.cc',
  'toplevel.h',
  'toplevellayout.cc',
  'toplevellayout.h',
  'toplevelsize.cc',
  'toplevelsize.h',
  'toplevelsurfaceimpl.cc',
  'toplevelsurfaceimpl.h',
  'value_cairo.cc',
  'value_cairo.h',
  'wrap_init.cc',
  'wrap_init.h',

  'private/applaunchcontext_p.h',
  'private/cairocontext_p.h',
  'private/clipboard_p.h',
  'private/contentformatsbuilder_p.h',
  'private/contentformats_p.h',
  'private/contentprovider_p.h',
  'private/cursor_p.h',
  'private/devicepad_p.h',
  'private/device_p.h',
  'private/devicetool_p.h',
  'private/displaymanager_p.h',
  'private/display_p.h',
  'private/drag_p.h',
  'private/dragsurface_p.h',
  'private/drawcontext_p.h',
  'private/drop_p.h',
  'private/enums_p.h',
  'private/event_p.h',
  'private/frameclock_p.h',
  'private/frametimings_p.h',
  'private/glcontext_p.h',
  'private/gltexture_p.h',
  'private/memorytexture_p.h',
  'private/monitor_p.h',
  'private/paintable_p.h',
  'private/pixbufanimationiter_p.h',
  'private/pixbufanimation_p.h',
  'private/pixbufformat_p.h',
  'private/pixbufloader_p.h',
  'private/pixbuf_p.h',
  'private/popuplayout_p.h',
  'private/popup_p.h',
  'private/rectangle_p.h',
  'private/rgba_p.h',
  'private/seat_p.h',
  'private/snapshot_p.h',
  'private/surface_p.h',
  'private/texture_p.h',
  'private/timecoord_p.h',
  'private/toplevellayout_p.h',
  'private/toplevel_p.h',
  'private/toplevelsize_p.h'
]

mm_gdk_include_directories = [
  '..' / '..',
  '../../../mm-glib'
]

mm_gdk_dependencies = [
  dependency('sigc++-3.0', fallback:['sigc++-3.0']),
  dependency('gobject-2.0', fallback:['glib']),
  dependency('glib-2.0', fallback:['glib']),
  dependency('gio-2.0', fallback:['glib']),
  dependency('gio-unix-2.0', fallback:['glib'])
]

mm_gdk_cpp_args = [
  '-DGTKMM_BUILD=1'
]

mm_gdk_library = static_library(
  mm_gdk_sources,
  dependencies: mm_gdk_dependencies,
  implicit_include_directories: false,
  include_directories: mm_glib_include_directories,
  cpp_args: mm_gdk_cpp_args,
  install: false
)
