mm_gtk_sources = [
  'aboutdialog.cc',
  'aboutdialog.h',
  'accelerator.cc',
  'accelerator.h',
  'accelkey.cc',
  'accelkey.h',
  'accessible.cc',
  'accessible.h',
  'actionable.cc',
  'actionable.h',
  'actionbar.cc',
  'actionbar.h',
  'adjustment.cc',
  'adjustment.h',
  'appchooserbutton.cc',
  'appchooserbutton.h',
  'appchooser.cc',
  'appchooserdialog.cc',
  'appchooserdialog.h',
  'appchooser.h',
  'appchooserwidget.cc',
  'appchooserwidget.h',
  'application.cc',
  'application.h',
  'applicationwindow.cc',
  'applicationwindow.h',
  'aspectframe.cc',
  'aspectframe.h',
  'assistant.cc',
  'assistant.h',
  'assistantpage.cc',
  'assistantpage.h',
  'binlayout.cc',
  'binlayout.h',
  'bitset.cc',
  'bitsetconstiter.cc',
  'bitsetconstiter.h',
  'bitset.h',
  'boolfilter.cc',
  'boolfilter.h',
  'border.cc',
  'border.h',
  'box.cc',
  'box.h',
  'boxlayout.cc',
  'boxlayout.h',
  'buildable.cc',
  'buildable.h',
  'builder.cc',
  'buildercscope.cc',
  'buildercscope.h',
  'builder.h',
  'builderscope.cc',
  'builderscope.h',
  'button.cc',
  'button.h',
  'calendar.cc',
  'calendar.h',
  'cellareabox.cc',
  'cellareabox.h',
  'cellarea.cc',
  'cellareacontext.cc',
  'cellareacontext.h',
  'cellarea.h',
  'celleditable.cc',
  'celleditable.h',
  'celllayout.cc',
  'celllayout.h',
  'cellrendereraccel.cc',
  'cellrendereraccel.h',
  'cellrenderer.cc',
  'cellrenderercombo.cc',
  'cellrenderercombo.h',
  'cellrenderer_generation.cc',
  'cellrenderer_generation.h',
  'cellrenderer.h',
  'cellrendererpixbuf.cc',
  'cellrendererpixbuf.h',
  'cellrendererprogress.cc',
  'cellrendererprogress.h',
  'cellrendererspin.cc',
  'cellrendererspin.h',
  'cellrendererspinner.cc',
  'cellrendererspinner.h',
  'cellrenderertext.cc',
  'cellrenderertext.h',
  'cellrenderertoggle.cc',
  'cellrenderertoggle.h',
  'cellview.cc',
  'cellview.h',
  'centerbox.cc',
  'centerbox.h',
  'centerlayout.cc',
  'centerlayout.h',
  'checkbutton.cc',
  'checkbutton.h',
  'colorbutton.cc',
  'colorbutton.h',
  'colorchooser.cc',
  'colorchooserdialog.cc',
  'colorchooserdialog.h',
  'colorchooser.h',
  'columnview.cc',
  'columnviewcolumn.cc',
  'columnviewcolumn.h',
  'columnview.h',
  'combobox.cc',
  'combobox.h',
  'comboboxtext.cc',
  'comboboxtext.h',
  'constraint.cc',
  'constraintguide.cc',
  'constraintguide.h',
  'constraint.h',
  'constraintlayout.cc',
  'constraintlayout.h',
  'constrainttarget.cc',
  'constrainttarget.h',
  'csslocation.cc',
  'csslocation.h',
  'cssprovider.cc',
  'cssprovider.h',
  'csssection.cc',
  'csssection.h',
  'dialog.cc',
  'dialog.h',
  'directorylist.cc',
  'directorylist.h',
  'dragicon.cc',
  'dragicon.h',
  'dragsource.cc',
  'dragsource.h',
  'drawingarea.cc',
  'drawingarea.h',
  'dropcontrollermotion.cc',
  'dropcontrollermotion.h',
  'dropdown.cc',
  'dropdown.h',
  'droptargetasync.cc',
  'droptargetasync.h',
  'droptarget.cc',
  'droptarget.h',
  'dummy_header.h',
  'editable.cc',
  'editable.h',
  'editablelabel.cc',
  'editablelabel.h',
  'emojichooser.cc',
  'emojichooser.h',
  'entrybuffer.cc',
  'entrybuffer.h',
  'entry.cc',
  'entrycompletion.cc',
  'entrycompletion.h',
  'entry.h',
  'enums.cc',
  'enums.h',
  'eventcontroller.cc',
  'eventcontrollerfocus.cc',
  'eventcontrollerfocus.h',
  'eventcontroller.h',
  'eventcontrollerkey.cc',
  'eventcontrollerkey.h',
  'eventcontrollerlegacy.cc',
  'eventcontrollerlegacy.h',
  'eventcontrollermotion.cc',
  'eventcontrollermotion.h',
  'eventcontrollerscroll.cc',
  'eventcontrollerscroll.h',
  'expander.cc',
  'expander.h',
  'expression.cc',
  'expression.h',
  'expressionwatch.cc',
  'expressionwatch.h',
  'filechooser.cc',
  'filechooserdialog.cc',
  'filechooserdialog.h',
  'filechooser.h',
  'filechoosernative.cc',
  'filechoosernative.h',
  'filechooserwidget.cc',
  'filechooserwidget.h',
  'filefilter.cc',
  'filefilter.h',
  'filter.cc',
  'filter.h',
  'filterlistmodel.cc',
  'filterlistmodel.h',
  'fixed.cc',
  'fixed.h',
  'flattenlistmodel.cc',
  'flattenlistmodel.h',
  'flowbox.cc',
  'flowboxchild.cc',
  'flowboxchild.h',
  'flowbox.h',
  'fontbutton.cc',
  'fontbutton.h',
  'fontchooser.cc',
  'fontchooserdialog.cc',
  'fontchooserdialog.h',
  'fontchooser.h',
  'fontchooserwidget.cc',
  'fontchooserwidget.h',
  'frame.cc',
  'frame.h',
  'gesture.cc',
  'gestureclick.cc',
  'gestureclick.h',
  'gesturedrag.cc',
  'gesturedrag.h',
  'gesture.h',
  'gesturelongpress.cc',
  'gesturelongpress.h',
  'gesturepan.cc',
  'gesturepan.h',
  'gesturerotate.cc',
  'gesturerotate.h',
  'gesturesingle.cc',
  'gesturesingle.h',
  'gesturestylus.cc',
  'gesturestylus.h',
  'gestureswipe.cc',
  'gestureswipe.h',
  'gesturezoom.cc',
  'gesturezoom.h',
  'glarea.cc',
  'glarea.h',
  'grid.cc',
  'grid.h',
  'gridlayout.cc',
  'gridlayoutchild.cc',
  'gridlayoutchild.h',
  'gridlayout.h',
  'gridview.cc',
  'gridview.h',
  'gtkmmconfig.h',
  'gtkmm.h',
  'headerbar.cc',
  'headerbar.h',
  'iconpaintable.cc',
  'iconpaintable.h',
  'icontheme.cc',
  'icontheme.h',
  'iconview.cc',
  'iconview.h',
  'image.cc',
  'image.h',
  'infobar.cc',
  'infobar.h',
  'init.cc',
  'init.h',
  'inscription.cc',
  'inscription.h',
  'label.cc',
  'label.h',
  'layoutchild.cc',
  'layoutchild.h',
  'layoutmanager.cc',
  'layoutmanager.h',
  'levelbar.cc',
  'levelbar.h',
  'linkbutton.cc',
  'linkbutton.h',
  'listbase.cc',
  'listbase.h',
  'listbox.cc',
  'listbox.h',
  'listboxrow.cc',
  'listboxrow.h',
  'listitem.cc',
  'listitemfactory.cc',
  'listitemfactory.h',
  'listitem.h',
  'liststore.cc',
  'liststore.h',
  'listview.cc',
  'listview.h',
  'listviewtext.cc',
  'listviewtext.h',
  'lockbutton.cc',
  'lockbutton.h',
  'mediacontrols.cc',
  'mediacontrols.h',
  'mediafile.cc',
  'mediafile.h',
  'mediastream.cc',
  'mediastream.h',
  'menubutton.cc',
  'menubutton.h',
  'messagedialog.cc',
  'messagedialog.h',
  'multifilter.cc',
  'multifilter.h',
  'multiselection.cc',
  'multiselection.h',
  'multisorter.cc',
  'multisorter.h',
  'native.cc',
  'nativedialog.cc',
  'nativedialog.h',
  'native.h',
  'noselection.cc',
  'noselection.h',
  'notebook.cc',
  'notebook.h',
  'notebookpage.cc',
  'notebookpage.h',
  'numericsorter.cc',
  'numericsorter.h',
  'object.cc',
  'object.h',
  'orientable.cc',
  'orientable.h',
  'overlay.cc',
  'overlay.h',
  'padactionentry.cc',
  'padactionentry.h',
  'padcontroller.cc',
  'padcontroller.h',
  'pagesetup.cc',
  'pagesetup.h',
  'pagesetupunixdialog.cc',
  'pagesetupunixdialog.h',
  'paned.cc',
  'paned.h',
  'papersize.cc',
  'papersize.h',
  'passwordentry.cc',
  'passwordentry.h',
  'picture.cc',
  'picture.h',
  'popover.cc',
  'popover.h',
  'popovermenubar.cc',
  'popovermenubar.h',
  'popovermenu.cc',
  'popovermenu.h',
  'printcontext.cc',
  'printcontext.h',
  'printer.cc',
  'printer.h',
  'printjob.cc',
  'printjob.h',
  'printoperation.cc',
  'printoperation.h',
  'printoperationpreview.cc',
  'printoperationpreview.h',
  'printsettings.cc',
  'printsettings.h',
  'printunixdialog.cc',
  'printunixdialog.h',
  'progressbar.cc',
  'progressbar.h',
  'range.cc',
  'range.h',
  'recentinfo.cc',
  'recentinfo.h',
  'recentmanager.cc',
  'recentmanager.h',
  'requisition.cc',
  'requisition.h',
  'revealer.cc',
  'revealer.h',
  'root.cc',
  'root.h',
  'scalebutton.cc',
  'scalebutton.h',
  'scale.cc',
  'scale.h',
  'scrollable.cc',
  'scrollable.h',
  'scrollbar.cc',
  'scrollbar.h',
  'scrolledwindow.cc',
  'scrolledwindow.h',
  'searchbar.cc',
  'searchbar.h',
  'searchentry.cc',
  'searchentry.h',
  'selectionfiltermodel.cc',
  'selectionfiltermodel.h',
  'selectionlistmodelimpl.cc',
  'selectionlistmodelimpl.h',
  'selectionmodel.cc',
  'selectionmodel.h',
  'separator.cc',
  'separator.h',
  'settings.cc',
  'settings.h',
  'shortcutaction.cc',
  'shortcutaction.h',
  'shortcut.cc',
  'shortcutcontroller.cc',
  'shortcutcontroller.h',
  'shortcut.h',
  'shortcutlabel.cc',
  'shortcutlabel.h',
  'shortcutmanager.cc',
  'shortcutmanager.h',
  'shortcutsgroup.cc',
  'shortcutsgroup.h',
  'shortcutssection.cc',
  'shortcutssection.h',
  'shortcutsshortcut.cc',
  'shortcutsshortcut.h',
  'shortcutswindow.cc',
  'shortcutswindow.h',
  'shortcuttrigger.cc',
  'shortcuttrigger.h',
  'signallistitemfactory.cc',
  'signallistitemfactory.h',
  'singleselection.cc',
  'singleselection.h',
  'sizegroup.cc',
  'sizegroup.h',
  'slicelistmodel.cc',
  'slicelistmodel.h',
  'snapshot.cc',
  'snapshot.h',
  'sorter.cc',
  'sorter.h',
  'sortlistmodel.cc',
  'sortlistmodel.h',
  'spinbutton.cc',
  'spinbutton.h',
  'spinner.cc',
  'spinner.h',
  'stack.cc',
  'stack.h',
  'stackpage.cc',
  'stackpage.h',
  'stacksidebar.cc',
  'stacksidebar.h',
  'stackswitcher.cc',
  'stackswitcher.h',
  'statusbar.cc',
  'statusbar.h',
  'stringfilter.cc',
  'stringfilter.h',
  'stringlist.cc',
  'stringlist.h',
  'stringobject.cc',
  'stringobject.h',
  'stringsorter.cc',
  'stringsorter.h',
  'stylecontext.cc',
  'stylecontext.h',
  'styleprovider.cc',
  'styleprovider.h',
  'switch.cc',
  'switch.h',
  'textbuffer.cc',
  'textbuffer.h',
  'text.cc',
  'textchildanchor.cc',
  'textchildanchor.h',
  'text.h',
  'textiter.cc',
  'textiter.h',
  'textmark.cc',
  'textmark.h',
  'texttag.cc',
  'texttag.h',
  'texttagtable.cc',
  'texttagtable.h',
  'textview.cc',
  'textview.h',
  'togglebutton.cc',
  'togglebutton.h',
  'tooltip.cc',
  'tooltip.h',
  'treedragdest.cc',
  'treedragdest.h',
  'treedragsource.cc',
  'treedragsource.h',
  'treeexpander.cc',
  'treeexpander.h',
  'treeiter.cc',
  'treeiter.h',
  'treelistmodel.cc',
  'treelistmodel.h',
  'treelistrow.cc',
  'treelistrow.h',
  'treemodel.cc',
  'treemodelcolumn.cc',
  'treemodelcolumn.h',
  'treemodelfilter.cc',
  'treemodelfilter.h',
  'treemodel.h',
  'treemodelsort.cc',
  'treemodelsort.h',
  'treepath.cc',
  'treepath.h',
  'treerowreference.cc',
  'treerowreference.h',
  'treeselection.cc',
  'treeselection.h',
  'treesortable.cc',
  'treesortable.h',
  'treestore.cc',
  'treestore.h',
  'treeview.cc',
  'treeviewcolumn.cc',
  'treeviewcolumn.h',
  'treeview.h',
  'treeview_private.cc',
  'treeview_private.h',
  'version.h',
  'video.cc',
  'video.h',
  'viewport.cc',
  'viewport.h',
  'volumebutton.cc',
  'volumebutton.h',
  'widget.cc',
  'widget.h',
  'widgetpaintable.cc',
  'widgetpaintable.h',
  'window.cc',
  'windowcontrols.cc',
  'windowcontrols.h',
  'windowgroup.cc',
  'windowgroup.h',
  'window.h',
  'windowhandle.cc',
  'windowhandle.h',
  'wrap_init.cc',
  'wrap_init.h',

  'private/aboutdialog_p.h',
  'private/accessible_p.h',
  'private/actionable_p.h',
  'private/actionbar_p.h',
  'private/adjustment_p.h',
  'private/appchooserbutton_p.h',
  'private/appchooserdialog_p.h',
  'private/appchooser_p.h',
  'private/appchooserwidget_p.h',
  'private/application_p.h',
  'private/applicationwindow_p.h',
  'private/aspectframe_p.h',
  'private/assistantpage_p.h',
  'private/assistant_p.h',
  'private/binlayout_p.h',
  'private/bitset_p.h',
  'private/boolfilter_p.h',
  'private/border_p.h',
  'private/boxlayout_p.h',
  'private/box_p.h',
  'private/buildable_p.h',
  'private/buildercscope_p.h',
  'private/builder_p.h',
  'private/builderscope_p.h',
  'private/button_p.h',
  'private/calendar_p.h',
  'private/cellareabox_p.h',
  'private/cellareacontext_p.h',
  'private/cellarea_p.h',
  'private/celleditable_p.h',
  'private/celllayout_p.h',
  'private/cellrendereraccel_p.h',
  'private/cellrenderercombo_p.h',
  'private/cellrenderer_p.h',
  'private/cellrendererpixbuf_p.h',
  'private/cellrendererprogress_p.h',
  'private/cellrendererspinner_p.h',
  'private/cellrendererspin_p.h',
  'private/cellrenderertext_p.h',
  'private/cellrenderertoggle_p.h',
  'private/cellview_p.h',
  'private/centerbox_p.h',
  'private/centerlayout_p.h',
  'private/checkbutton_p.h',
  'private/colorbutton_p.h',
  'private/colorchooserdialog_p.h',
  'private/colorchooser_p.h',
  'private/columnviewcolumn_p.h',
  'private/columnview_p.h',
  'private/combobox_p.h',
  'private/comboboxtext_p.h',
  'private/constraintguide_p.h',
  'private/constraintlayout_p.h',
  'private/constraint_p.h',
  'private/constrainttarget_p.h',
  'private/csslocation_p.h',
  'private/cssprovider_p.h',
  'private/csssection_p.h',
  'private/dialog_p.h',
  'private/directorylist_p.h',
  'private/dragicon_p.h',
  'private/dragsource_p.h',
  'private/drawingarea_p.h',
  'private/dropcontrollermotion_p.h',
  'private/dropdown_p.h',
  'private/droptargetasync_p.h',
  'private/droptarget_p.h',
  'private/editablelabel_p.h',
  'private/editable_p.h',
  'private/emojichooser_p.h',
  'private/entrybuffer_p.h',
  'private/entrycompletion_p.h',
  'private/entry_p.h',
  'private/enums_p.h',
  'private/eventcontrollerfocus_p.h',
  'private/eventcontrollerkey_p.h',
  'private/eventcontrollerlegacy_p.h',
  'private/eventcontrollermotion_p.h',
  'private/eventcontroller_p.h',
  'private/eventcontrollerscroll_p.h',
  'private/expander_p.h',
  'private/expression_p.h',
  'private/expressionwatch_p.h',
  'private/filechooserdialog_p.h',
  'private/filechoosernative_p.h',
  'private/filechooser_p.h',
  'private/filechooserwidget_p.h',
  'private/filefilter_p.h',
  'private/filterlistmodel_p.h',
  'private/filter_p.h',
  'private/fixed_p.h',
  'private/flattenlistmodel_p.h',
  'private/flowboxchild_p.h',
  'private/flowbox_p.h',
  'private/fontbutton_p.h',
  'private/fontchooserdialog_p.h',
  'private/fontchooser_p.h',
  'private/fontchooserwidget_p.h',
  'private/frame_p.h',
  'private/gestureclick_p.h',
  'private/gesturedrag_p.h',
  'private/gesturelongpress_p.h',
  'private/gesturepan_p.h',
  'private/gesture_p.h',
  'private/gesturerotate_p.h',
  'private/gesturesingle_p.h',
  'private/gesturestylus_p.h',
  'private/gestureswipe_p.h',
  'private/gesturezoom_p.h',
  'private/glarea_p.h',
  'private/gridlayoutchild_p.h',
  'private/gridlayout_p.h',
  'private/grid_p.h',
  'private/gridview_p.h',
  'private/headerbar_p.h',
  'private/iconpaintable_p.h',
  'private/icontheme_p.h',
  'private/iconview_p.h',
  'private/image_p.h',
  'private/infobar_p.h',
  'private/inscription_p.h',
  'private/label_p.h',
  'private/layoutchild_p.h',
  'private/layoutmanager_p.h',
  'private/levelbar_p.h',
  'private/linkbutton_p.h',
  'private/listbase_p.h',
  'private/listbox_p.h',
  'private/listboxrow_p.h',
  'private/listitemfactory_p.h',
  'private/listitem_p.h',
  'private/liststore_p.h',
  'private/listview_p.h',
  'private/lockbutton_p.h',
  'private/mediacontrols_p.h',
  'private/mediafile_p.h',
  'private/mediastream_p.h',
  'private/menubutton_p.h',
  'private/messagedialog_p.h',
  'private/multifilter_p.h',
  'private/multiselection_p.h',
  'private/multisorter_p.h',
  'private/nativedialog_p.h',
  'private/native_p.h',
  'private/noselection_p.h',
  'private/notebookpage_p.h',
  'private/notebook_p.h',
  'private/numericsorter_p.h',
  'private/object_p.h',
  'private/orientable_p.h',
  'private/overlay_p.h',
  'private/padactionentry_p.h',
  'private/padcontroller_p.h',
  'private/pagesetup_p.h',
  'private/pagesetupunixdialog_p.h',
  'private/paned_p.h',
  'private/papersize_p.h',
  'private/passwordentry_p.h',
  'private/picture_p.h',
  'private/popovermenubar_p.h',
  'private/popovermenu_p.h',
  'private/popover_p.h',
  'private/printcontext_p.h',
  'private/printer_p.h',
  'private/printjob_p.h',
  'private/printoperation_p.h',
  'private/printoperationpreview_p.h',
  'private/printsettings_p.h',
  'private/printunixdialog_p.h',
  'private/progressbar_p.h',
  'private/range_p.h',
  'private/recentinfo_p.h',
  'private/recentmanager_p.h',
  'private/requisition_p.h',
  'private/revealer_p.h',
  'private/root_p.h',
  'private/scalebutton_p.h',
  'private/scale_p.h',
  'private/scrollable_p.h',
  'private/scrollbar_p.h',
  'private/scrolledwindow_p.h',
  'private/searchbar_p.h',
  'private/searchentry_p.h',
  'private/selectionfiltermodel_p.h',
  'private/selectionmodel_p.h',
  'private/separator_p.h',
  'private/settings_p.h',
  'private/shortcutaction_p.h',
  'private/shortcutcontroller_p.h',
  'private/shortcutlabel_p.h',
  'private/shortcutmanager_p.h',
  'private/shortcut_p.h',
  'private/shortcutsgroup_p.h',
  'private/shortcutssection_p.h',
  'private/shortcutsshortcut_p.h',
  'private/shortcutswindow_p.h',
  'private/shortcuttrigger_p.h',
  'private/signallistitemfactory_p.h',
  'private/singleselection_p.h',
  'private/sizegroup_p.h',
  'private/slicelistmodel_p.h',
  'private/snapshot_p.h',
  'private/sorter_p.h',
  'private/sortlistmodel_p.h',
  'private/spinbutton_p.h',
  'private/spinner_p.h',
  'private/stackpage_p.h',
  'private/stack_p.h',
  'private/stacksidebar_p.h',
  'private/stackswitcher_p.h',
  'private/statusbar_p.h',
  'private/stringfilter_p.h',
  'private/stringlist_p.h',
  'private/stringobject_p.h',
  'private/stringsorter_p.h',
  'private/stylecontext_p.h',
  'private/styleprovider_p.h',
  'private/switch_p.h',
  'private/textbuffer_p.h',
  'private/textchildanchor_p.h',
  'private/textiter_p.h',
  'private/textmark_p.h',
  'private/text_p.h',
  'private/texttag_p.h',
  'private/texttagtable_p.h',
  'private/textview_p.h',
  'private/togglebutton_p.h',
  'private/tooltip_p.h',
  'private/treedragdest_p.h',
  'private/treedragsource_p.h',
  'private/treeexpander_p.h',
  'private/treeiter_p.h',
  'private/treelistmodel_p.h',
  'private/treelistrow_p.h',
  'private/treemodelfilter_p.h',
  'private/treemodel_p.h',
  'private/treemodelsort_p.h',
  'private/treepath_p.h',
  'private/treerowreference_p.h',
  'private/treeselection_p.h',
  'private/treesortable_p.h',
  'private/treestore_p.h',
  'private/treeviewcolumn_p.h',
  'private/treeview_p.h',
  'private/video_p.h',
  'private/viewport_p.h',
  'private/volumebutton_p.h',
  'private/widgetpaintable_p.h',
  'private/widget_p.h',
  'private/windowcontrols_p.h',
  'private/windowgroup_p.h',
  'private/windowhandle_p.h',
  'private/window_p.h'
]

mm_gtk_include_directories = [
  '..' / '..',
  '../../../mm-glib'
]

mm_gtk_dependencies = [
  dependency('sigc++-3.0', fallback:['sigc++-3.0']),
  dependency('gobject-2.0', fallback:['glib']),
  dependency('glib-2.0', fallback:['glib']),
  dependency('gio-2.0', fallback:['glib']),
  dependency('gio-unix-2.0', fallback:['glib'])
]


mm_gtk_cpp_args = [
  '-DGTKMM_BUILD=1'
]

mm_gtk_library = library(
  mm_gtk_sources,
  dependencies: mm_gtk_dependencies,
  implicit_include_directories: false,
  include_directories: mm_gtk_include_directories,
  cpp_args: mm_gtk_cpp_args,
  link_whole: mm_gdk_library,
  install: true
)
